--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block stylesheets %}
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
     <link rel="stylesheet" href="/bundles/app/app.css">
 {% endblock %}
 
