Implement application header

--- a/src/Client/app/styles/_variables.scss
+++ b/src/Client/app/styles/_variables.scss
@@ -1,2 +1,14 @@
-// FONTS
-$main_font_family: "Open Sans";
+// Backgrounds
+$body-bg: #fafafb;
+
+// Fonts
+$font-family-base: "Roboto";
+$font-size-base: 12px;
+
+// Layout
+$grid-columns: 10;
+$app-max-width: 1375px;
+$app-min-width: 350px;
+
+// Components
+$header-title-text-color: #4a4a4a;
