--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -3,15 +3,24 @@
 {% block title %}Application form{% endblock %}
 
 {% block body %}
-    <p>Url for ajax form submit: {{ path('process.form') }}</p>
+
+    <div class="container-fluid">
+
+        {% include 'default/_header.html.twig' %}
+
+
+    </div>
+
+    {# <p>Url for ajax form submit: {{ path('process.form') }}</p> #}
 {% endblock %}
 
 {% block stylesheets %}
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="/bundles/app/app.css">
 {% endblock %}
 
 {% block javascripts %}
     <script type="text/javascript" src="/bundles/app/vendor.js"></script>
     <script type="text/javascript" src="/bundles/app/app.js"></script>
+    <script>require('initialize');</script>
 {% endblock %}
