Implement user settings display

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -7,7 +7,7 @@
     <div class="container-fluid">
 
         {% include 'default/_header.html.twig' %}
-
+        {% include 'default/_user-info.html.twig' %}
 
     </div>
 
