--- a/src/Client/app/styles/_variables.scss
+++ b/src/Client/app/styles/_variables.scss
@@ -1,9 +1,11 @@
 // Backgrounds
 $body-bg: #fafafb;
+$card-bg: #ffffff;
 
 // Fonts
 $font-family-base: "Roboto";
-$font-size-base: 12px;
+$font-size-base: 14px;
+$text-color: #4a4a4a;
 
 // Layout
 $grid-columns: 10;
@@ -12,3 +14,4 @@ $app-min-width: 350px;
 
 // Components
 $header-title-text-color: #4a4a4a;
+$card-border-color: #f1f1f2;
