--- a/src/Client/app/styles/components/header.scss
+++ b/src/Client/app/styles/components/header.scss
@@ -4,11 +4,12 @@
 .header {
   padding: 92px 0 53px;
   border-bottom: 1px solid #e1e1e1;
+  margin-bottom: 40px;
 }
 
 .header__title {
   font-weight: 100;
-  font-size: 2.9em;
+  font-size: 2.5em;
   letter-spacing: -1px;
   text-shadow: 0 0 0.005px $header-title-text-color;
   color: $header-title-text-color;
@@ -25,7 +26,7 @@
   border: none;
   border-radius: 18px;
   color: #b3b3b3;
-  font-size: 1.2em;
+  font-size: 1em;
   letter-spacing: 1px;
 
   &:focus,
@@ -46,6 +47,6 @@
 
 @media screen and (max-width: 380px) {
   .header__title {
-    font-size: 2.5em;
+    font-size: 2.1em;
   }
 }
