Set up views structure and routing

--- a/app/Resources/views/default/_header.html.twig
+++ b/app/Resources/views/default/_header.html.twig
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header" id="header">
     <div class="row">
         <div class="col-xs-7">
             <h1 class="header__title">
@@ -6,7 +6,7 @@
             </h1>
         </div>
         <div class="col-xs-3 text-right">
-            <button class="header__button">
+            <button class="header__button js-edit-button">
                 Edit
             </button>
         </div>
