--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -11,7 +11,7 @@
 
     </div>
 
-    {# <p>Url for ajax form submit: {{ path('process.form') }}</p> #}
+    <!-- <p>Url for ajax form submit: {{ path('process.form') }}</p> -->
 {% endblock %}
 
 {% block stylesheets %}
