--- a/app/Resources/views/default/_user-info.html.twig
+++ b/app/Resources/views/default/_user-info.html.twig
@@ -1,4 +1,4 @@
-<div class="user-info">
+<div class="user-info" id="user-info">
     <div class="row">
         <div class="col-xs-3">
             <div class="card">
