Implement modal layout

--- a/src/Client/app/styles/_variables.scss
+++ b/src/Client/app/styles/_variables.scss
@@ -1,6 +1,8 @@
 // Backgrounds
 $body-bg: #fafafb;
 $card-bg: #ffffff;
+$modal-layout-backdrop-bg: rgba(0, 0, 0, 0.7);
+$modal-layout-dialog-bg: $body-bg;
 
 // Fonts
 $font-family-base: "Roboto";
@@ -11,7 +13,15 @@ $text-color: #4a4a4a;
 $grid-columns: 10;
 $app-max-width: 1375px;
 $app-min-width: 350px;
+$modal-layout-max-width: 1440px;
+$modal-layout-body-max-width: 790px;
 
-// Components
+// Z-index
+$modal-layout-base-z-index: 100;
+$modal-layout-backdrop-z-index: $modal-layout-base-z-index + 1;
+$modal-layout-dialog-z-index: $modal-layout-backdrop-z-index + 1;
+
+// Components specific variables
 $header-title-text-color: #4a4a4a;
 $card-border-color: #f1f1f2;
+$modal-layout-padding: 15px;
