--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -8,6 +8,8 @@
 
         {% include 'default/_header.html.twig' %}
         {% include 'default/_user-info.html.twig' %}
+        {% include 'default/_edit-form.html.twig' %}
+        {% include 'default/_modal.html.twig' %}
 
     </div>
 
@@ -15,7 +17,7 @@
 {% endblock %}
 
 {% block stylesheets %}
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet">
+    <!--link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet"-->
     <link rel="stylesheet" href="/bundles/app/app.css">
 {% endblock %}
 
