--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -13,11 +13,13 @@
 
     </div>
 
+    <div id="modal-outlet"></div>
+
     <!-- <p>Url for ajax form submit: {{ path('process.form') }}</p> -->
 {% endblock %}
 
 {% block stylesheets %}
-    <!--link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet"-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="/bundles/app/app.css">
 {% endblock %}
 
