--- a/src/Client/app/styles/components/app.scss
+++ b/src/Client/app/styles/components/app.scss
@@ -1,4 +1,5 @@
 @import "../variables";
+@import "../mixins/header";
 
 #app {
   max-width: $app-max-width;
@@ -8,4 +9,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-smoothing: antialiased;
+
+  h1, h2, h3, h4, h5, h6 {
+    @include header()
+  }
 }
