--- a/src/Client/app/styles/components/header.scss
+++ b/src/Client/app/styles/components/header.scss
@@ -1,6 +1,7 @@
 @import "../variables";
 @import "../bootstrap";
 @import "../mixins/no-button-outline";
+@import "../mixins/header";
 
 .header {
   padding: 92px 0 53px;
@@ -9,11 +10,7 @@
 }
 
 .header__title {
-  font-weight: 100;
   font-size: 2.5em;
-  letter-spacing: -1px;
-  text-shadow: 0 0 0.005px $header-title-text-color;
-  color: $header-title-text-color;
   margin: 0;
 }
 
