--- a/src/Client/app/styles/components/edit-form.scss
+++ b/src/Client/app/styles/components/edit-form.scss
@@ -32,13 +32,14 @@
 .edit-form__input {
   @extend .form-control;
 
+  height: auto;
   border-radius: 0;
   border: none;
   box-shadow: none;
   border-bottom: 1px solid lighten($form-input-color, 15%);
   background: transparent;
   font-weight: 300;
-  padding: 20px 0;
+  padding: 9px 0;
   font-size: 1.1em;
   outline: none;
   position: relative;
@@ -60,4 +61,11 @@
       @include shift-label();
     }
   }
+}
+
+textarea.edit-form__input--textarea {
+  @extend .edit-form__input;
+
+  resize: none;
+  overflow: hidden;
 }
