Add correct format for input fields, implement date field transformation

--- a/src/Client/app/styles/components/edit-form.scss
+++ b/src/Client/app/styles/components/edit-form.scss
@@ -32,7 +32,8 @@
 .edit-form__input {
   @extend .form-control;
 
-  height: auto;
+  height: 40px;
+  line-height: inherit;
   border-radius: 0;
   border: none;
   box-shadow: none;
