--- a/app/Resources/views/default/_edit-form.html.twig
+++ b/app/Resources/views/default/_edit-form.html.twig
@@ -1,5 +1,5 @@
 <script type="text/template" id="edit-form-template">
-    <div id="edit-form" class="edit-form container-fluid">
+    <form id="edit-form" class="edit-form container-fluid">
 
         <h2 class="edit-form__title">Application form</h2>
 
@@ -8,7 +8,7 @@
 
                 {# User Name #}
                 <div class="edit-form__field js-field">
-                    <input type="text" value="<%= name %>" class="edit-form__input js-user-name">
+                    <input type="text" value="<%= name %>" class="edit-form__input js-user-name" required>
                     <label class="edit-form__label">User Name</label>
                 </div>
 
@@ -28,7 +28,7 @@
 
                 {# Email #}
                 <div class="edit-form__field js-field">
-                    <input type="text" value="<%= email %>" class="edit-form__input js-user-email">
+                    <input type="email" value="<%= email %>" class="edit-form__input js-user-email" required>
                     <label class="edit-form__label">Email</label>
                 </div>
 
@@ -37,7 +37,7 @@
 
                 {# Site URL #}
                 <div class="edit-form__field js-field">
-                    <input type="text" value="<%= siteUrl %>" class="edit-form__input js-user-site">
+                    <input type="url" value="<%= siteUrl %>" class="edit-form__input js-user-site">
                     <label class="edit-form__label">URL</label>
                 </div>
 
@@ -48,7 +48,7 @@
 
                 {# Phone number #}
                 <div class="edit-form__field js-field">
-                    <input type="text" value="<%= phone %>" class="edit-form__input js-user-phone">
+                    <input type="tel" value="<%= phone %>" class="edit-form__input js-user-phone">
                     <label class="edit-form__label">Phone number</label>
                 </div>
 
@@ -59,7 +59,7 @@
 
                         {# Skill number #}
                         <div class="edit-form__field js-field">
-                            <input type="text" value="<%= skill %>" class="edit-form__input js-user-skill">
+                            <input type="number" value="<%= skill %>" class="edit-form__input js-user-skill">
                             <label class="edit-form__label">Skill number</label>
                         </div>
 
@@ -115,5 +115,5 @@
             </div>
         </div>
 
-    </div>
+    </form>
 </script>
