Replace Fontawesome by Material Design Icons

--- a/src/Client/app/styles/_variables.scss
+++ b/src/Client/app/styles/_variables.scss
@@ -7,7 +7,7 @@ $modal-layout-dialog-bg: $body-bg;
 // Fonts
 $font-family-base: "Roboto";
 $font-size-base: 14px;
-$fa-font-path: "/bundles/app/fonts";
+$material-icons-font-path: "/bundles/app/fonts";
 
 // Colors
 $text-color: #4a4a4a;
