Implement model synchronization

--- a/app/Resources/views/default/_edit-form.html.twig
+++ b/app/Resources/views/default/_edit-form.html.twig
@@ -112,7 +112,7 @@
 
                 {# About #}
                 <div class="edit-form__field js-field">
-                    <textarea class="edit-form__input--textarea js-user-about" value="<%= about %>" rows="1"></textarea>
+                    <textarea class="edit-form__input--textarea js-user-about" value="<%= about %>" rows="1"><%= about %></textarea>
                     <label class="edit-form__label">Enter a brief description of yourself and interest</label>
                 </div>
 
