--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -19,7 +19,7 @@
 {% endblock %}
 
 {% block stylesheets %}
-    <!--link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet"-->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="/bundles/app/app.css">
 {% endblock %}
 
