--- a/src/Client/app/styles/_variables.scss
+++ b/src/Client/app/styles/_variables.scss
@@ -15,6 +15,7 @@ $header-color: #4a4a4a;
 $card-border-color: #f1f1f2;
 $form-input-color: #b9b9b9;
 $form-input-active-color: #26abec;
+$form-error-color: #ff5555;
 
 // Layout
 $grid-columns: 10;
