Implement saving model

--- a/app/Resources/views/default/_edit-form.html.twig
+++ b/app/Resources/views/default/_edit-form.html.twig
@@ -1,5 +1,6 @@
 <script type="text/template" id="edit-form-template">
     <form id="edit-form" class="edit-form container-fluid">
+        {{ form_row(form._token) }}
 
         <h2 class="edit-form__title">Application form</h2>
 
