--- a/app/Resources/views/default/_modal.html.twig
+++ b/app/Resources/views/default/_modal.html.twig
@@ -3,6 +3,7 @@
         <div class="modal-layout__dialog js-modal-dialog">
             <div class="modal-layout__header">
                 <div class="modal-layout__controls">
+                    <span class="modal-layout__spinner js-spinner"></span>
                     <button class="modal-layout__action--secondary js-secondary-action">
                         <%= secondaryActionTitle %>
                     </button>
