--- a/app/Resources/views/default/_user-info.html.twig
+++ b/app/Resources/views/default/_user-info.html.twig
@@ -8,7 +8,7 @@
                 </p>
 
                 <p class="user-info__field user-info__field--thin js-user-birthday">
-                    {{ user.userBirthday }}
+                    {{ user.userBirthday|date('d F Y') }}
                 </p>
 
                 <p class="user-info__field user-info__field--thin">
