Fix birthday handling

--- a/app/Resources/views/default/_edit-form.html.twig
+++ b/app/Resources/views/default/_edit-form.html.twig
@@ -18,7 +18,7 @@
 
                 {# Birthday #}
                 <div class="edit-form__field js-field">
-                    <input type="text" value="<%= birthday %>" class="edit-form__input js-user-birthday">
+                    <input type="text" value="<%= birthdayTitle %>" class="edit-form__input js-user-birthday">
                     <label class="edit-form__label">Birthdate</label>
                 </div>
 
