Fix some rerendering issues

--- a/app/Resources/views/default/_edit-form.html.twig
+++ b/app/Resources/views/default/_edit-form.html.twig
@@ -68,7 +68,7 @@
                     <div class="col-xs-3 text-right edit-form__radio-container js-field">
 
                         {# Gender Male #}
-                        <label class="edit-form__radio js-user-gender-male <%= isMale ? 'selected' : '' %>">
+                        <label class="edit-form__radio js-user-gender-male">
                             Male
                         </label>
 
@@ -76,7 +76,7 @@
                     <div class="col-xs-3 text-right edit-form__radio-container js-field">
 
                         {# Gender Female #}
-                        <label class="edit-form__radio js-user-gender-female <%= isFemale ? 'selected' : '' %>">
+                        <label class="edit-form__radio js-user-gender-female">
                             Female
                         </label>
 
