Some visual fixes

--- a/src/Client/app/styles/components/card.scss
+++ b/src/Client/app/styles/components/card.scss
@@ -3,5 +3,5 @@
 .card {
   padding: 15px;
   background-color: $card-bg;
-  box-shadow: 1px -1px 4px $card-border-color;
+  box-shadow: 1px -1px 4px 1px $card-border-color;
 }
