--- a/app/Resources/views/default/_edit-form.html.twig
+++ b/app/Resources/views/default/_edit-form.html.twig
@@ -2,6 +2,10 @@
     <form id="edit-form" class="edit-form container-fluid">
         {{ form_row(form._token) }}
 
+        <div class="edit-form__error js-error-message">
+            There are some errors in the form
+        </div>
+
         <h2 class="edit-form__title">Application form</h2>
 
         <div class="row">
