--- a/src/Client/app/styles/components/edit-form.scss
+++ b/src/Client/app/styles/components/edit-form.scss
@@ -7,6 +7,7 @@
   @extend .form-horizontal;
 
   margin-bottom: 75px;
+  position: relative;
 }
 
 .edit-form__title {
@@ -120,4 +121,15 @@ textarea.edit-form__input--textarea {
       color: $form-input-active-color;
     }
   }
+}
+
+.edit-form__error {
+  @extend .alert;
+  @extend .alert-danger;
+
+  position: absolute;
+  left: 0;
+  right: 0;
+  border: none;
+  display: none;
 }
